--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
     "@next-auth/mongodb-adapter": "^1.1.3",
+    "autoprefixer": "^10.4.21",
     "bcryptjs": "^2.4.3",
     "framer-motion": "^12.0.0",
     "jsonwebtoken": "^9.0.2",
@@ -19,6 +20,7 @@
     "mongoose": "^8.9.3",
     "next": "15.5.4",
     "next-auth": "^4.24.11",
+    "postcss": "^8.5.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.54.2",
@@ -27,15 +29,15 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
+    "@tailwindcss/postcss": "^0.0.0-insiders.a6214f7",
     "@types/bcryptjs": "^2.4.6",
     "@types/jsonwebtoken": "^9.0.7",
     "@types/node": "^22.10.5",
     "@types/react": "^19.0.2",
     "@types/react-dom": "^19.0.2",
-    "@tailwindcss/postcss": "^0.0.0-insiders.a6214f7",
     "eslint": "^9.17.0",
     "eslint-config-next": "15.5.4",
-    "tailwindcss": "^3.4.17",
+    "tailwindcss": "^3.4.18",
     "typescript": "^5.7.2"
   }
 }
